--- a/7.heart_failure.ipynb
+++ b/7.heart_failure.ipynb
@@ -856,7 +856,12 @@
     "plt.title('We see that the ratio is occupied in the following order: ASY, NAP ,ATA , TA ', fontfamily='serif', fontsize=12, pad=15)\n",
     "plt.xticks([0,1], ['For individuals without heart disease', 'for individual with heart disease'])\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# 심장병 환자와 비환자 간에 흉통 유형의 분포가 다르게 나타난다. 특히 심장병 환자의 ASY(무증상) 비율이 높다\n",
+    "# 이는 심장병 환자들이 주로 무증상 흉통을 겪는다는 것을 의미한다.\n",
+    "# 심장병 환자와는 다르게 비환자의 경우 흉통 유형의 발생 순서가 ATA(비전형적인 협심증)와 NAP(비협심증 흉통), ASY(무증상), TA(전형적인 협심증) 순서로 나타난다.\n",
+    "# 이는 비전형적인 혐심증과 비협심증 흉통의 빈번한 발생은 비환자들에게도 심장 건강에 대해 주의해야 함을 의미한다."
    ]
   },
   {
